Implement updated methods in NoteService using NoteMapper