@@ -1,5 +1,6 @@
 package com.note.demo.service;
 
+import com.note.demo.mapper.NoteMapper;
 import com.note.demo.model.DTO.NoteReqDTO;
 import com.note.demo.model.DTO.NoteResponseDTO;
 import com.note.demo.model.Entity.Note;
@@ -9,7 +10,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class NoteService implements INoteService {
@@ -17,58 +17,66 @@ public class NoteService implements INoteService {
     @Autowired
     private INoteRepository noteRepository;
 
+    @Autowired
+    private NoteMapper noteMapper;
+
     @Override
-    public List<Note> getNotes() {
-        return noteRepository.findAll();
+    public List<NoteResponseDTO> getNotes() {
+        List<Note> notes = noteRepository.findAll();
+        return notes.stream()
+                .map(noteMapper::toResponseDTO)
+                .toList(); // Transformación usando Mapper
     }
 
     @Override
-    public void saveNote(Note note) {
-        noteRepository.save(note);
+    public NoteResponseDTO saveNote(NoteReqDTO noteReqDTO) {
+        Note note = noteMapper.toEntity(noteReqDTO);
+        Note savedNote = noteRepository.save(note);
+        return noteMapper.toResponseDTO(savedNote);
     }
 
     @Override
-    public void deleteNote(Long id) {
-        noteRepository.deleteById(id);
-    }
-
-    @Override
-    public Note findNoteById(Long id) {
-        return noteRepository.findById(id)
+    public NoteResponseDTO findNoteById(Long id) {
+        Note note = noteRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Note with ID " + id + " not found"));
+        return noteMapper.toResponseDTO(note);
     }
 
     @Override
     public NoteResponseDTO updateNote(Long id, NoteReqDTO noteReqDTO) {
-        Note note = findNoteById(id);
+        Note existingNote = noteRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Note with ID " + id + " not found"));
 
-        note.setTitle(noteReqDTO.getTitle());
-        note.setContent(noteReqDTO.getContent());
-        note.setArchived(noteReqDTO.getArchived());
-        note.setCategories(noteReqDTO.getCategories());
+        existingNote.setTitle(noteReqDTO.getTitle());
+        existingNote.setContent(noteReqDTO.getContent());
+        existingNote.setArchived(noteReqDTO.getArchived());
+        existingNote.setCategories(noteReqDTO.getCategories());
 
-        noteRepository.save(note);
+        Note updatedNote = noteRepository.save(existingNote);
+        return noteMapper.toResponseDTO(updatedNote);
+    }
 
-        return NoteResponseDTO.builder()
-                .id(note.getId())
-                .title(note.getTitle())
-                .content(note.getContent())
-                .archived(note.isArchived())
-                .categories(note.getCategories())
-                .build();
+    @Override
+    public void deleteNote(Long id) {
+        if (!noteRepository.existsById(id)) {
+            throw new EntityNotFoundException("Note with ID " + id + " not found");
+        }
+        noteRepository.deleteById(id);
     }
 
     @Override
     public void archiveNote(Long id, boolean archived) {
-        Note note = findNoteById(id);
+        Note note = noteRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Note with ID " + id + " not found"));
         note.setArchived(archived);
-        saveNote(note);
+        noteRepository.save(note);
     }
 
     @Override
-    public List<Note> getNotesByCategory(String category) {
-        return noteRepository.findAll().stream()
-                .filter(note -> note.getCategories() != null && note.getCategories().contains(category))
-                .collect(Collectors.toList());
+    public List<NoteResponseDTO> getNotesByCategory(String category) {
+        List<Note> notes = noteRepository.findByCategory(category);
+        return notes.stream()
+                .map(noteMapper::toResponseDTO)
+                .toList();
     }
 }
